# ngt-c

./: .gitignore  CMakeLists.txt  README.md
examples/: Makefile  export.cc  export_ngt  getmsg.cc  getmsg_ngt  import.cc  import_ngt  main.c  main.cc  open.c  open.cc  save.cc  setmsg.cc  setmsg_ngt
include/croco/: Index.h  c_api.h
lib/: CMakeLists.txt
lib/croco/: CMakeLists.txt  Index.cc  c_api.cc  repository.proto
